--- a/src/content/styles/cofrades.scss
+++ b/src/content/styles/cofrades.scss
@@ -15,8 +15,16 @@
     }
 
   }
+
   p.direccion{
     color: rgba(0, 0, 0, 0.541176);
+  }
+
+  .fab-cofrade{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 0 32px 23px 23px;
   }
 }
 
@@ -37,4 +45,21 @@
     }
   }
   .angular-google-map-container { height: 250px; }
+  
 }
+  .autocomplete-custom-template li {
+    border-bottom: 1px solid #ccc;
+    height: auto;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    white-space: normal; }
+  .autocomplete-custom-template li:last-child {
+    border-bottom-width: 0; }
+  .autocomplete-custom-template .item-title, .autocomplete-custom-template .item-metadata {
+    display: block;
+    line-height: 2; }
+  .autocomplete-custom-template .item-title md-icon {
+    height: 18px;
+    width: 18px; 
+    margin-right: 8px;
+  }
