--- a/src/app/cofrades/detail/cofradeDetalle.html
+++ b/src/app/cofrades/detail/cofradeDetalle.html
@@ -26,13 +26,13 @@
       <div layout layout-padding class="md-padding" layout-align="space-around center">
         <div class="md-2-line cofrade-detalle" flex="40">
           <div class="md-item-text md-whiteframe-z1">
-            <h3>Número de orden</h3>
+            <h3>Número de<br>orden</h3>
             <p>{{vm.cofrade.numeroOrden}}</p>
           </div>
         </div>
         <div class="md-2-line cofrade-detalle" flex="40">
           <div class="md-item-text md-whiteframe-z1">
-            <h3>Número de cofrade</h3>
+            <h3>Número de<br>cofrade</h3>
             <p>{{vm.cofrade.numeroCofrade}}</p>
           </div>
         </div>
