--- a/src/app/cofrades/list/cofrades.html
+++ b/src/app/cofrades/list/cofrades.html
@@ -19,7 +19,7 @@
 
   </div>
   <div  class="md-margin">
-  <md-button class="fab-cofrade md-margin md-fab" aria-label="Añadir Cofrade" ui-sref="cofradesNuevo">
+  <md-button class="fab-cofrade md-margin md-fab" aria-label="Añadir Cofrade" ui-sref="cofradesCambios">
     <md-icon md-font-library="material-icons">add</md-icon>
   </md-button>
 </div>
