--- a/src/app/cofrades/detail/cofradeDetalle.html
+++ b/src/app/cofrades/detail/cofradeDetalle.html
@@ -14,9 +14,10 @@
         <md-button class="md-icon-button" aria-label="Editar Cofrade" ng-click="vm.modifyCofrade(vm.cofrade.id, $event)">
           <md-icon md-font-library="material-icons">mode_edit</md-icon>
         </md-button>
-        <md-button class="md-icon-button" aria-label="Eliminar Cofrade">
+        <md-button class="md-icon-button" aria-label="Eliminar Cofrade" ng-if="(vm.cofrade.numeroOrden && vm.cofrade.numeroCofrade)">
           <md-icon md-font-library="material-icons">clear</md-icon>
         </md-button>
+        <restore-Cofrade cofrade="vm.cofrade.id" ss="md-icon-button" aria-label="Eliminar Cofrade" ng-if="(vm.cofrade.numeroOrden && !vm.cofrade.numeroCofrade)"></restore-Cofrade>
       </div>
     </md-toolbar>
 
